# fritzing-app

./: .dockerignore  .gitignore  .gitmodules  .qmake.conf  .travis.yml  APP-README.txt  CMakeLists.txt  Fritzing.sh  FritzingInfo.plist  INSTALL.txt  LICENSE.CC-BY-SA  LICENSE.LGPLv3  LICENSE.Modified_BSD  README.md  README.txt  SetupAPI.Lib  appveyor.yml  deploy_fritzing.bat  deploy_fritzing_mac.sh  fritzing  fritzing.appdata.xml  fritzing.desktop  fritzing.pro  fritzing.rc  fritzingresources.qrc  install_fritizing.sh  install_fritzing.sh  linguist_release.bat  macPrebuild.sh  org.fritzing.Fritzing.appdata.xml  org.fritzing.Fritzing.desktop  parts.db  phoenix.pro  phoenixresources.qrc  readme.md  ui_consolesettings.h  ui_consolewindow.h  ui_modfiledialog.h  uninstall_fritzing.sh
src/: CMakeLists.txt  commands.cpp  commands.h  debugdialog.cpp  debugdialog.h  fapplication.cpp  fapplication.h  fsplashscreen.cpp  fsplashscreen.h  fsvgrenderer.cpp  fsvgrenderer.h  installedfonts.h  itemdrag.cpp  itemdrag.h  layerattributes.cpp  layerattributes.h  main.cpp  processeventblocker.cpp  processeventblocker.h  project_properties.cpp  project_properties.h  routingstatus.h  sketchtoolbutton.cpp  sketchtoolbutton.h  src.pro  viewgeometry.cpp  viewgeometry.h  viewlayer.cpp  viewlayer.h  waitpushundostack.cpp  waitpushundostack.h  zlibdummy.c
src/application/: application.pro  fapplication.cpp  fsplashscreen.cpp  fsplashscreen.h  main.cpp
src/autoroute/: CMakeLists.txt  autoroute.pri  autoroute.pro  autorouteprogressdialog.cpp  autorouteprogressdialog.h  autorouter.cpp  autorouter.h  autoroutersettingsdialog.cpp  autoroutersettingsdialog.h  checker.cpp  checker.h  drc.cpp  drc.h  eventeater.cpp  eventeater.h  panelizer.cpp  panelizer.h  zoomcontrols.cpp  zoomcontrols.h
src/connectors/: CMakeLists.txt  bus.cpp  bus.h  busshared.cpp  busshared.h  connector.cpp  connector.h  connectoritem.cpp  connectoritem.h  connectors.pro  connectorshared.cpp  connectorshared.h  debugconnectors.cpp  debugconnectors.h  debugconnectorsprobe.cpp  debugconnectorsprobe.h  ercdata.cpp  ercdata.h  nonconnectoritem.cpp  nonconnectoritem.h  svgidlayer.cpp  svgidlayer.h
src/dialogs/: CMakeLists.txt  dialogs.pri  exportparametersdialog.cpp  exportparametersdialog.h  exportparametersdialog.ui  fabuploaddialog.cpp  fabuploaddialog.h  fabuploaddialog.ui  fabuploadprogress.cpp  fabuploadprogress.h  fabuploadprogressprobe.cpp  fabuploadprogressprobe.h  groundfillseeddialog.cpp  groundfillseeddialog.h  networkhelper.cpp  networkhelper.h  pinlabeldialog.cpp  pinlabeldialog.h  prefsdialog.cpp  prefsdialog.h  quotedialog.cpp  quotedialog.h  recoverydialog.cpp  recoverydialog.h  setcolordialog.cpp  setcolordialog.h  translatorlistmodel.cpp  translatorlistmodel.h
src/dock/: CMakeLists.txt  dock.pri  layerpalette.cpp  layerpalette.h  miniview.cpp  miniviewcontainer.cpp  miniviewcontainer.h  triplenavigator.cpp  viewswitcher.cpp  viewswitcher.h  viewswitcherdockwidget.cpp  viewswitcherdockwidget.h
src/eagle/: CMakeLists.txt  fritzing2eagle.cpp  fritzing2eagle.h
src/help/: CMakeLists.txt  aboutbox.cpp  aboutbox.h  firsttimehelpdialog.cpp  firsttimehelpdialog.h  help.pro  helper.cpp  helper.h  sketchmainhelp.cpp  tipsandtricks.cpp  tipsandtricks.h
src/infoview/: CMakeLists.txt  htmlinfoview.cpp  htmlinfoview.h  infoview.pri  scalediconframe.cpp  scalediconframe.h
src/ipc/: ipc.pri  ipc_d_356.cpp  ipc_d_356.h
src/items/: CMakeLists.txt  FProbeR1PosPCB.cpp  FProbeR1PosPCB.h  FProbeRPartLabel.cpp  FProbeRPartLabel.h  FProbeSwitchPackage.cpp  FProbeSwitchPackage.h  (+68 more)
(+4769 files in other folders)
